# intellectual

./: .editorconfig  .gitattributes  .gitignore  .secrets.example  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.arm  README.md  build.rs  docker-compose.yml  instances.json
.cargo/: config.toml
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  instance.yml
.github/workflows/: docker.yml  rust.yml
src/: album.rs  api.rs  artist.rs  errors.rs  genius.rs  home.rs  lyrics.rs  main.rs  resource.rs  search.rs  settings.rs  templates.rs  utils.rs
static/: artist.css  home.css  home.html  lyrics.css  manifest.json  search.css  style.css
static/font/: inter.css
static/font/inter/: inter.css
static/style/: artist.css  error.css  home.css  lyrics.css  search.css  settings.css  song.css  style.css
static/style/theme/: catppuccin-frappe.css  catppuccin-latte.css  catppuccin-macchiato.css  catppuccin-mocha.css  github-dark.css  github-light.css  gruvbox-dark.css  gruvbox-light.css  sweet.css  themes.json
templates/: 400.html  404.html  500.html  album.html  artist.html  base.html  home.html  lyrics.html  search.html  settings.html  song.html
