[package]
name = "intellectual"
description = "Alternate frontend for Genius focused on privacy and simplicity"
version = "0.5.0"
license = "AGPL-3.0"
repository = "https://github.com/Insprill/intellectual"
edition = "2021"

[dependencies]
actix-web = { version = "4.3.1", default-features = false, features = ["macros", "compress-gzip", "rustls"] }
askama = { version = "0.12.0", default-features = false, features = ["percent-encoding"] }
awc = { version = "3.1.1", default-features = false, features = ["compress-gzip", "rustls"] }
clap = { version = "4.3.11", features = ["derive"] }
futures = { version = "0.3.28", default-features = false }
include_dir = "0.7.3"
log = "0.4.19"
once_cell = "1.18.0"
rustls = "0.20.8" # Must stay compatible with the version actix-web is using.
rustls-pemfile = "1.0.3"
scraper = "0.17.1"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
simplelog = "0.12.1"
urlencoding = "2.1.2"

[profile.release]
codegen-units = 1
strip = true
lto = true
