[package]
name = "intellectual"
description = "Alternate frontend for Genius focused on privacy and simplicity"
version = "0.8.0"
license = "AGPL-3.0"
repository = "https://github.com/Insprill/intellectual"
edition = "2021"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "cookies", "http2", "rustls-0_21"] } # Zstd doesn't compile on aarch64 musl :/
askama = { version = "0.12", default-features = false, features = ["percent-encoding"] }
awc = { version = "3", default-features = false, features = ["compress-gzip", "rustls-0_21"] }
clap = { version = "4", features = ["derive"] }
cookie = "0.16" # Must stay compatible with the version actix-web is using.
futures = { version = "0.3", default-features = false }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"]}
include_dir = "0.7"
lazy-regex = "3"
log = "0.4"
once_cell = "1"
rustls = "0.21" # Must stay compatible with the version actix-web is using.
rustls-pemfile = "1"
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
urlencoding = "2"

[build-dependencies]
random-string = "1"

[profile.dev.package.image]
opt-level = 1

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
lto = true
